unpackaged/main/default/objects/Opportunity/fields/Account_PhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>Account_PhoneNumber__c</fullName>
    <formula>Account.PersonMobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account PhoneNumber</label>
    <type>Text</type>
</CustomField>