unpackaged/main/default/objects/Opportunity/fields/Amount_Growth__c.field-meta.xml
<CustomField>
    <fullName>Amount_Growth__c</fullName>
    <formula>IF(ISPICKVAL(Type,&#39;New Business&#39;),&#39;NA&#39;,
IF(ISPICKVAL(Type,&#39;Growth Business&#39;),&#39;NA&#39;,
IF(ISBLANK(Amount_Previous_Contract__c),&#39;NA&#39;,
IF( Amount  &lt;&gt; 0,  TEXT(Amount  -  Amount_Previous_Contract__c) ,  IF( Proposed_Amount__c  &lt;&gt; 0,  TEXT(Proposed_Amount__c  -  Amount_Previous_Contract__c) ,  TEXT(ETSALES_Customer_Budget__c  -  Amount_Previous_Contract__c )) )
)
)
)</formula>
    <label>Amount (Growth)</label>
    <type>Text</type>
</CustomField>