unpackaged/main/default/objects/Opportunity/fields/Amount_New_Contract__c.field-meta.xml
<CustomField>
    <fullName>Amount_New_Contract__c</fullName>
    <label>Amount (New Contract)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>