unpackaged/main/default/objects/Opportunity/fields/Amount_Previous_Contract__c.field-meta.xml
<CustomField>
    <fullName>Amount_Previous_Contract__c</fullName>
    <label>Amount (Previous Contract)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>