unpackaged/main/default/objects/Opportunity/fields/Amt_per_day__c.field-meta.xml
<CustomField>
    <fullName>Amt_per_day__c</fullName>
    <formula>Amount /  Prd_crnt_days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amt per day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>