unpackaged/main/default/objects/Opportunity/fields/Annual_Amount_Additional_Growth__c.field-meta.xml
<CustomField>
    <fullName>Annual_Amount_Additional_Growth__c</fullName>
    <label>Annual Amount Additional Growth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>