unpackaged/main/default/objects/Opportunity/fields/Annual_Amount_Growth__c.field-meta.xml
<CustomField>
    <fullName>Annual_Amount_Growth__c</fullName>
    <formula>IF( NOT(ISBLANK( Annual_Amount_Additional_Growth__c )) ,&#39;0&#39;,
IF(ISPICKVAL(Type,&#39;New Business&#39;),&#39;NA&#39;,
IF(ISPICKVAL(Type,&#39;Growth Business&#39;),&#39;NA&#39;,
IF(Annual_Amount_Previous_Contract__c==0,&#39;NA&#39;,
IF( Annual_AmountFormulla__c  &lt;&gt; 0,   TEXT(Annual_AmountFormulla__c   -  Annual_Amount_Previous_Contract__c) ,  IF( Annual_proposed_amount__c  &lt;&gt; 0,TEXT(Annual_proposed_amount__c - Annual_Amount_Previous_Contract__c) ,  TEXT(Annual_budget__c  - Annual_Amount_Previous_Contract__c)) )
)
)
)
)</formula>
    <label>Annual Amount (Growth)</label>
    <type>Text</type>
</CustomField>