unpackaged/main/default/objects/Opportunity/fields/Annual_Amount_Growth_Additional__c.field-meta.xml
<CustomField>
    <fullName>Annual_Amount_Growth_Additional__c</fullName>
    <label>Annual Amount (Growth) Additional</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>