unpackaged/main/default/objects/Opportunity/fields/Annual_Amount_Till_End_of_the_Year__c.field-meta.xml
<CustomField>
    <fullName>Annual_Amount_Till_End_of_the_Year__c</fullName>
    <formula>( Annual_AmountFormulla__c  / ((365 * VALUE(BLANKVALUE(TEXT( Contract_Years__c ),&#39;0&#39;))) + (30.417*VALUE(BLANKVALUE(TEXT( Contract_Months__c ),&#39;0&#39;))) + (7 * VALUE(BLANKVALUE(TEXT( Contract_Weeks__c ),&#39;0&#39;))) + VALUE(BLANKVALUE(TEXT( Contract_Days__c ),&#39;0&#39;)) )) * ( DATE( YEAR( Mobilization_Date__c ) ,12,31) - Mobilization_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Amount Till End of the Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>