unpackaged/main/default/objects/Opportunity/fields/Annual_budget__c.field-meta.xml
<CustomField>
    <fullName>Annual_budget__c</fullName>
    <formula>IF(ISBLANK(TEXT(Contract_Years__c)),
ETSALES_Customer_Budget__c ,((ETSALES_Customer_Budget__c /((VALUE(TEXT(Contract_Years__c))*12*4)+(VALUE(IF(ISPICKVAL(Contract_Months__c , &#39;&#39;), &#39;0&#39;,TEXT( Contract_Months__c )))*4)+VALUE(IF(ISPICKVAL(Contract_Weeks__c , &#39;&#39;), &#39;0&#39;,TEXT( Contract_Weeks__c )))))*12*4))</formula>
    <label>Annual Budget (Current Contract)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>