unpackaged/main/default/objects/Opportunity/fields/Annual_Budget_Previous_Contract__c.field-meta.xml
<CustomField>
    <fullName>Annual_Budget_Previous_Contract__c</fullName>
    <formula>&#39;NA&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Budget (Previous Contract)</label>
    <type>Text</type>
</CustomField>