unpackaged/main/default/objects/Opportunity/fields/Appointment_Date__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Appointment Date</label>
    <type>DateTime</type>
</CustomField>