unpackaged/main/default/objects/Opportunity/fields/Assign_to_pricing_team__c.field-meta.xml
<CustomField>
    <fullName>Assign_to_pricing_team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>sales manager can select any one from pricing team, to send the request for quotation.</description>
    <label>Assign to pricing team</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select users from pricing team only.</errorMessage>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>contains</operation>
            <value>ETS_HQ-Pricing Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>