unpackaged/main/default/objects/Opportunity/fields/Awarded_Date__c.field-meta.xml
<CustomField>
    <fullName>Awarded_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Awarded Date</label>
    <type>Date</type>
</CustomField>