unpackaged/main/default/objects/Opportunity/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>