unpackaged/main/default/objects/Opportunity/fields/Chassis_Number__c.field-meta.xml
<CustomField>
    <fullName>Chassis_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Chassis Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>