unpackaged/main/default/objects/Opportunity/fields/Check_Out_ERP_Message__c.field-meta.xml
<CustomField>
    <fullName>Check_Out_ERP_Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Check Out ERP Message</label>
    <type>TextArea</type>
</CustomField>