unpackaged/main/default/objects/Opportunity/fields/Check_Out_ERP_Status__c.field-meta.xml
<CustomField>
    <fullName>Check_Out_ERP_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Check Out ERP Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>