unpackaged/main/default/objects/Opportunity/fields/Check_Out_For__c.field-meta.xml
<CustomField>
    <fullName>Check_Out_For__c</fullName>
    <label>Check Out For</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal Assignments</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Vehicle Rental</fullName>
            </value>
            <value>
                <fullName>Vehicle Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>