unpackaged/main/default/objects/Opportunity/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Competitor Before ET (Current Contract)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>