unpackaged/main/default/objects/Opportunity/fields/Competitor_Before_ET_Previous_Contract__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Before_ET_Previous_Contract__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Competitor Before ET (Previous Contract)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>