unpackaged/main/default/objects/Opportunity/fields/Contract_Weeks__c.field-meta.xml
<CustomField>
    <fullName>Contract_Weeks__c</fullName>
    <label>Contract Weeks (Current Contract)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ETSales_No_of_Weeks</valueSetName>
    </valueSet>
</CustomField>