unpackaged/main/default/objects/Opportunity/fields/Contract_Weeks_Previous_Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract_Weeks_Previous_Contract__c</fullName>
    <label>Contract Weeks (Previous Contract)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>