unpackaged/main/default/objects/Opportunity/fields/Contract_Years__c.field-meta.xml
<CustomField>
    <fullName>Contract_Years__c</fullName>
    <label>Contract Years (Current Contract)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ETSales_No_of_Years</valueSetName>
    </valueSet>
</CustomField>