unpackaged/main/default/objects/Opportunity/fields/Convertedfromlead__c.field-meta.xml
<CustomField>
    <fullName>Convertedfromlead__c</fullName>
    <defaultValue>&quot;Direct Opportunity&quot;</defaultValue>
    <label>Opportunity Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Converted from Lead</fullName>
            </value>
            <value>
                <fullName>Direct Opportunity</fullName>
                <default>true</default>
                <label>Direct Opportunity</label>
            </value>
            <value>
                <fullName>No</fullName>
                <isActive>false</isActive>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
                <isActive>false</isActive>
                <label>Yes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>