unpackaged/main/default/objects/Opportunity/fields/Customer_PO__c.field-meta.xml
<CustomField>
    <fullName>Customer_PO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer PO</label>
    <referenceTo>Customer_PO__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>