unpackaged/main/default/objects/Opportunity/fields/Customer_Price_Expectation__c.field-meta.xml
<CustomField>
    <fullName>Customer_Price_Expectation__c</fullName>
    <label>Customer Price Expectation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>