unpackaged/main/default/objects/Opportunity/fields/Discount_applicable__c.field-meta.xml
<CustomField>
    <fullName>Discount_applicable__c</fullName>
    <label>Discount applicable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>