unpackaged/main/default/objects/Opportunity/fields/Driver_s_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Driver_s_Mobile__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Driver&#39;s Mobile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>