unpackaged/main/default/objects/Opportunity/fields/Driver_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Driver_s_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Driver&#39;s Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>