unpackaged/main/default/objects/Opportunity/fields/Effective_From__c.field-meta.xml
<CustomField>
    <fullName>Effective_From__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Effective From</label>
    <type>Date</type>
</CustomField>