unpackaged/main/default/objects/Opportunity/fields/End_Mileage__c.field-meta.xml
<CustomField>
    <fullName>End_Mileage__c</fullName>
    <label>End Mileage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>