unpackaged/main/default/objects/Opportunity/fields/ET_isUpdated__c.field-meta.xml
<CustomField>
    <fullName>ET_isUpdated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isUpdated</label>
    <type>Checkbox</type>
</CustomField>