unpackaged/main/default/objects/Opportunity/fields/ET_Opportunity_Source__c.field-meta.xml
<CustomField>
    <fullName>ET_Opportunity_Source__c</fullName>
    <label>Opportunity Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Community Portal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>