unpackaged/main/default/objects/Opportunity/fields/ET_Service_Previous_Contract__c.field-meta.xml
<CustomField>
    <fullName>ET_Service_Previous_Contract__c</fullName>
    <label>ET Service (Previous Contract)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Airport drop off</fullName>
            </value>
            <value>
                <fullName>Chauffeur - Dubai</fullName>
            </value>
            <value>
                <fullName>Chauffeur - Others</fullName>
            </value>
            <value>
                <fullName>Abu Dhabi</fullName>
            </value>
            <value>
                <fullName>Documents</fullName>
            </value>
            <value>
                <fullName>Motor Cycle</fullName>
            </value>
            <value>
                <fullName>Electric Car</fullName>
            </value>
            <value>
                <fullName>Vehicle</fullName>
            </value>
            <value>
                <fullName>Government School</fullName>
            </value>
            <value>
                <fullName>Quran Studies</fullName>
            </value>
            <value>
                <fullName>Private School</fullName>
            </value>
            <value>
                <fullName>Government Executive</fullName>
            </value>
            <value>
                <fullName>Staff-Employees and Labors</fullName>
            </value>
            <value>
                <fullName>Haj &amp; Umrah</fullName>
            </value>
            <value>
                <fullName>University</fullName>
            </value>
            <value>
                <fullName>Club Members</fullName>
            </value>
            <value>
                <fullName>Vehicle Auctioning</fullName>
            </value>
            <value>
                <fullName>Sale Of Scrap Materials</fullName>
            </value>
            <value>
                <fullName>Maintenance Services - Contracted</fullName>
            </value>
            <value>
                <fullName>Maintenance Services - Non-Contracted</fullName>
            </value>
            <value>
                <fullName>Luxury Vehicles Maintenance</fullName>
            </value>
            <value>
                <fullName>Dry Wash</fullName>
            </value>
            <value>
                <fullName>Tire Rethreading and Repair</fullName>
            </value>
            <value>
                <fullName>Refurbished and used tire Sales</fullName>
            </value>
            <value>
                <fullName>Road Side Assistance</fullName>
            </value>
            <value>
                <fullName>Body-Accident Repair services</fullName>
            </value>
            <value>
                <fullName>Bus Refurbishment</fullName>
            </value>
            <value>
                <fullName>CNG Conversion Services</fullName>
            </value>
            <value>
                <fullName>Vehicle Inspection</fullName>
            </value>
            <value>
                <fullName>Heavy Equipment Maintenance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>