unpackaged/main/default/objects/Opportunity/fields/ETM_Bank_Loan__c.field-meta.xml
<CustomField>
    <fullName>ETM_Bank_Loan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bank Loan</label>
    <type>Checkbox</type>
</CustomField>