unpackaged/main/default/objects/Opportunity/fields/ETM_Buying_Price__c.field-meta.xml
<CustomField>
    <fullName>ETM_Buying_Price__c</fullName>
    <label>Buying Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>