unpackaged/main/default/objects/Opportunity/fields/ETM_Estimation_Amount__c.field-meta.xml
<CustomField>
    <fullName>ETM_Estimation_Amount__c</fullName>
    <label>Estimation Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>