unpackaged/main/default/objects/Opportunity/fields/ETM_Test_Drive__c.field-meta.xml
<CustomField>
    <fullName>ETM_Test_Drive__c</fullName>
    <label>Test Drive</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>