unpackaged/main/default/objects/Opportunity/fields/ETSALES_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Approval_Status__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted For Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Rejected by Pricing Team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>