unpackaged/main/default/objects/Opportunity/fields/ETSALES_Bidding_Type__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Bidding_Type__c</fullName>
    <label>Bidding Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Public Tender</fullName>
            </value>
            <value>
                <fullName>Quotation</fullName>
            </value>
            <value>
                <fullName>Pre-qualified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>