unpackaged/main/default/objects/Opportunity/fields/ETSALES_Close_Lost__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Close_Lost__c</fullName>
    <formula>if(ISPICKVAL(StageName,&quot;Closed Lost&quot;),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Close Lost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>