unpackaged/main/default/objects/Opportunity/fields/ETSALES_Comments__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Comments__c</fullName>
    <description>Lead Comments</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>