unpackaged/main/default/objects/Opportunity/fields/ETSALES_Contract_Period_In_Years__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Contract_Period_In_Years__c</fullName>
    <label>Contract Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>