unpackaged/main/default/objects/Opportunity/fields/ETSALES_Customer_Budget__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Customer_Budget__c</fullName>
    <label>Customer Budget (Current Contract)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>