unpackaged/main/default/objects/Opportunity/fields/ETSALES_Customer_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Customer_PO_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer PO No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>