unpackaged/main/default/objects/Opportunity/fields/ETSALES_GL_Services__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_GL_Services__c</fullName>
    <label>ET Service (Current Contract)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ETSALES_Service_Type_Values</valueSetName>
    </valueSet>
</CustomField>