unpackaged/main/default/objects/Opportunity/fields/ETSALES_GNG_Approval_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_GNG_Approval_Status_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Go-No-Go Approval Received Date</label>
    <type>DateTime</type>
</CustomField>