unpackaged/main/default/objects/Opportunity/fields/ETSALES_GNG_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_GNG_Submission_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Go-No-Go Submission Date</label>
    <type>DateTime</type>
</CustomField>